SonarQbe_adjustment